[project]
name = "toolkit"
version = "0.1.0"
description = "Simulate observations with an interferometer"
authors = [
    { name="Wiebe", email="wiebedg@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
